# SmartTravel

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  current-status.md  design-decisions.md
docs/runbooks/: add-airline.md  bootstrap-pool.md  troubleshoot-bot-detection.md
scripts/: bootstrap_pool.py
src/smart_travel/: __init__.py  __main__.py  agents.py  config.py  main.py  setup.py
src/smart_travel/accounts/: __init__.py  captcha_solver.py  email_manager.py  registration.py  sessions.py  store.py
src/smart_travel/cache/: __init__.py  keys.py  postgres_store.py  store.py
src/smart_travel/data/: __init__.py  alliances.py  award_charts.py  mock_flights.py  mock_hotels.py  mock_tickets.py  resolver.py  schemas.py  seats_aero.py
src/smart_travel/data/sources/: __init__.py  _amadeus_auth.py  base.py  registry.py
src/smart_travel/data/sources/flights/: __init__.py  alaska.py  amadeus.py  american.py  delta.py  google_flights.py  mock.py  seats_aero.py  united.py
src/smart_travel/data/sources/hotels/: __init__.py  amadeus.py  google_hotels.py  mock.py
src/smart_travel/data/sources/tickets/: __init__.py  mock.py  ticketmaster.py
src/smart_travel/db/: __init__.py  migrations.py  pool.py
src/smart_travel/memory/: __init__.py  postgres_store.py  preferences.py  session.py  store.py
src/smart_travel/tools/: __init__.py  _formatting.py  account_tools.py  award_flights.py  award_search.py  browser.py  flights.py  hotels.py  preferences.py  tickets.py
tests/: __init__.py  conftest.py  test_agents.py  test_award_charts.py  test_award_search_store.py  test_award_search_tools.py  test_browser_tools.py  test_cache.py  test_config.py  test_data_quality.py  test_e2e.py  test_email_manager.py  test_integration_awards.py  test_integration_resolver.py  test_live_api.py  test_memory.py  test_registration.py  test_registry.py  test_resolver.py  test_sessions.py  test_setup.py  test_tools.py
tests/test_sources/: __init__.py  test_airline_award_sources.py  test_amadeus_flights.py  test_amadeus_hotels.py  test_browser_sources.py  test_capability_guardrails.py  test_mock_sources.py  test_seats_aero.py  test_ticketmaster.py
