[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-travel"
version = "0.1.0"
description = "SmartTravel - AI-powered travel search agent using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "anyio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
smart-travel = "smart_travel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
