[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-travel"
version = "0.3.0"
description = "SmartTravel - Personal AI travel agent using browser automation and Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "anyio",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
live = [
    "python-dotenv>=1.0",
]
browser = [
    "playwright-stealth>=1.0",
]
all = [
    "python-dotenv>=1.0",
    "playwright-stealth>=1.0",
]

[project.scripts]
smart-travel = "smart_travel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
